--- a/ViewAulus/Views/Categories/Create.cshtml
+++ b/ViewAulus/Views/Categories/Create.cshtml
@@ -10,43 +10,42 @@
         <a href="#" class="panel-expander notext fr">&nbsp;</a>
         <h2 class="clipboard">Create Category</h2>
     </div>
-    @using (Html.BeginForm("Create", "Categories", FormMethod.Post, new { id = "create" }))
-    {
-            <div class="panel-container">
-                <form name="form" method="post" action="" onsubmit="return validation();">
-                    <div class="options">
-                        <ul>
-                            <li>
-                                @*@Html.ActionLink("Post", "Create", "", new { @class = "post" })*@
-                                <a class="post" href='javascript:create.submit()'>Post</a>
-                            </li>
+    <form action="/Categories/Create" id="create" method="post">
+        <div class="panel-container">
+            <div class="options">
+                <ul>
+                    <li>
 
-                            <li>@Html.ActionLink("Cancel", "Index", "", new { @class = "cancel" })</li>
-                        </ul>
+                        <a class="post" href='javascript:create.submit()'>Post</a>
+                    </li>
+
+                    <li><a class="cancel" href="/Categories?Length=0">Cancel</a></li>
+                </ul>
+            </div>
+
+
+            <input name="__RequestVerificationToken" type="hidden" value="6WME1OMwyytkX-6V7IUVcP5TbS1Vq2hs9iHiO_xqYTSvX6SjxGrgJ60CblTqWlWeqNeWzQhnEB86qGrTYHqNVbRGRxBzqOaVR0q9AjJfjvM1" />
+
+            <div class="form-horizontal">
+
+                <div class="form-group">
+                    <label class="control-label col-md-2" for="Name">Name</label>
+                    <div class="col-md-10">
+                        <input class="form-control text-box single-line" id="Name" name="Name" type="text" value="" />
+                        <span class="field-validation-valid text-danger" data-valmsg-for="Name" data-valmsg-replace="true"></span>
                     </div>
+                </div>
 
-
-                    @Html.AntiForgeryToken()
-
-                    <div class="form-horizontal">
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
+                <div class="form-group">
+                    <label class="control-label col-md-2" for="Description">Description</label>
+                    <div class="col-md-10">
+                        <input class="form-control text-box single-line" id="Description" name="Description" type="text" value="" />
+                        <span class="field-validation-valid text-danger" data-valmsg-for="Description" data-valmsg-replace="true"></span>
                     </div>
-                </form>
-          </div>
-            }
+                </div>
+            </div>
+        </div>
+    </form>
 </div>
+
+
