--- a/ViewAulus/Views/Opacities/Create.cshtml
+++ b/ViewAulus/Views/Opacities/Create.cshtml
@@ -5,46 +5,47 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="panel spacer-20">
-    <div class="panel-heading no-padding">
-        <a href="#" class="panel-expander notext fr">&nbsp;</a>
-        <h2 class="clipboard">Create Opacity</h2>
-    </div>
-    @using (Html.BeginForm("Create", "Opacities", FormMethod.Post, new { id = "create" }))
-    {
-        <div class="panel-container">
-            <div class="options">
-                <ul>
-                    <li>
-                        @*@Html.ActionLink("Post", "Create", "", new { @class = "post" })*@
-                        <a class="post" href='javascript:create.submit()'>Post</a>
-                    </li>
 
-                    <li>@Html.ActionLink("Cancel", "Index", "", new { @class = "cancel" })</li>
-                </ul>
-            </div>
+                        <div class="panel spacer-20">
+                            <div class="panel-heading no-padding">
+                                <a href="#" class="panel-expander notext fr">&nbsp;</a>
+                                <h2 class="clipboard">Create Opacity</h2>
+                            </div>
+                            <form action="/Opacities/Create" id="create" method="post">
+                                <div class="panel-container">
+                                    <div class="options">
+                                        <ul>
+                                            <li>
+
+                                                <a class="post" href='javascript:create.submit()'>Post</a>
+                                            </li>
+
+                                            <li><a class="cancel" href="/Opacities?Length=0">Cancel</a></li>
+                                        </ul>
+                                    </div>
 
 
-            @Html.AntiForgeryToken()
+                                    <input name="__RequestVerificationToken" type="hidden" value="k5ztnsoADhpHKAnwziW_ALPwfHUKvzixtdOcoDLpGJfDZbyo460Vtv_DCSniT4mVUUIjgpwkor-HhsVDqpQsRgEjGJhA0eS6sluTJ2rh5v41" />
 
-            <div class="form-horizontal">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+                                    <div class="form-horizontal">
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-        </div>
-    }
-</div>
+                                        <div class="form-group">
+                                            <label class="control-label col-md-2" for="Name">Name</label>
+                                            <div class="col-md-10">
+                                                <input class="form-control text-box single-line" id="Name" name="Name" type="text" value="" />
+                                                <span class="field-validation-valid text-danger" data-valmsg-for="Name" data-valmsg-replace="true"></span>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
+                                            <label class="control-label col-md-2" for="Description">Description</label>
+                                            <div class="col-md-10">
+                                                <input class="form-control text-box single-line" id="Description" name="Description" type="text" value="" />
+                                                <span class="field-validation-valid text-danger" data-valmsg-for="Description" data-valmsg-replace="true"></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+               
