--- a/ViewAulus/Views/RawMaterials/Create.cshtml
+++ b/ViewAulus/Views/RawMaterials/Create.cshtml
@@ -7,7 +7,6 @@
 }
 
 
-<script src="~/js/validation.js" type="text/javascript"></script>
 
 <div class="panel spacer-20">
     <div class="panel-heading no-padding">
@@ -24,7 +23,7 @@
                                  <a class="post" onclick="return validation();" href='javascript:create.submit()'>Post</a>                        
                               </li>
 
-                        <li>@Html.ActionLink("Cancel", "Index", "", new { @class = "cancel" })</li>
+                        <li><a class="cancel" href="/RawMaterials?Length=0">Cancel</a></li>
                     </ul>
                 </div>
                 @Html.AntiForgeryToken()
