--- a/ViewAulus/Views/RawMaterials/Edit.cshtml
+++ b/ViewAulus/Views/RawMaterials/Edit.cshtml
@@ -7,170 +7,161 @@
 }
 
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
-</head>
-<body>
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/jqueryval")
+
     <div class="panel spacer-20">
     <div class="panel-heading no-padding">
         <a href="#" class="panel-expander notext fr">&nbsp;</a>
         <h2 class="clipboard">Edit Raw Material </h2>
     </div>
 
-    @using (Html.BeginForm("Edit", "RawMaterials", FormMethod.Post, new { id = "create" }))
-        {
+        <form action="/RawMaterials/Edit/1" id="create" method="post">
+         
             <div class="panel-container">
-            <div class="options">
-                <ul>
-                    <li>
-        @*@Html.ActionLink("Post", "Create", "", new { @class = "post" })*@
-        <a class="post" href='javascript:create.submit()'>Post</a>
-                    </li>
+                <div class="options">
+                    <ul>
+                        <li>
+                            @*@Html.ActionLink("Post", "Create", "", new { @class = "post" })*@
+                            <a class="post" href='javascript:create.submit()'>Post</a>
+                        </li>
 
                         <li>@Html.ActionLink("Cancel", "Index", "", new { @class = "cancel" })</li>
-                </ul>
-                    </div>
-        @Html.AntiForgeryToken()
-        
-        <div class="form-horizontal">
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.Id)
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Code, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Code, "", new { @class = "text-danger" })
+                    </ul>
                 </div>
-            </div>
-            <div class="form-group">
-                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                </div>
-            </div>
+                <input name="__RequestVerificationToken" type="hidden" value="BN7hehX0ERTNhjPJAUTNPPYpmpJ17MKUnf3r1lystcub1vepwW3-13lwEH0THvy4DGez4YSIKbK9iQy-zCSpjgTNox1Wf5gP6_sJUK48NJo1" />
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.Notes, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Notes, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Notes, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.ChemicalName, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.ChemicalName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.ChemicalName, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                <label class="control-label col-md-2" for="Status">Is Active</label>
-                <div class="col-md-10">
-                    <div class="checkbox">
-                        @Html.EditorFor(model => model.Status)
-                        @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
+                <div class="form-horizontal">
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.HiddenFor(model => model.Id)
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2" for="Code">Code</label>
+                        <div class="col-md-10">
+                            <input class="form-control text-box single-line" id="Code" name="Code" type="text" value="" />
+                            <span class="field-validation-valid text-danger" data-valmsg-for="Code" data-valmsg-replace="true"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2" for="Name">Name</label>
+                        <div class="col-md-10">
+                            <input class="form-control text-box single-line" id="Name" name="Name" type="text" value="" />
+                            <span class="field-validation-valid text-danger" data-valmsg-for="Name" data-valmsg-replace="true"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2" for="Description">Description</label>
+                        <div class="col-md-10">
+                            <input class="form-control text-box single-line" id="Description" name="Description" type="text" value="" />
+                            <span class="field-validation-valid text-danger" data-valmsg-for="Description" data-valmsg-replace="true"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2" for="Notes">Notes</label>
+                        <div class="col-md-10">
+                            <input class="form-control text-box single-line" id="Notes" name="Notes" type="text" value="" />
+                            <span class="field-validation-valid text-danger" data-valmsg-for="Notes" data-valmsg-replace="true"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2" for="ChemicalName">ChemicalName</label>
+                        <div class="col-md-10">
+                            <input class="form-control text-box single-line" id="ChemicalName" name="ChemicalName" type="text" value="" />
+                            <span class="field-validation-valid text-danger" data-valmsg-for="ChemicalName" data-valmsg-replace="true"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2" for="Status">Is Active</label>
+                        <div class="col-md-10">
+                            <div class="checkbox">
+                                <input checked="checked" class="check-box" data-val="true" data-val-required="O campo Status é obrigatório." id="Status" name="Status" type="checkbox" value="true" /><input name="Status" type="hidden" value="false" />
+                                <span class="field-validation-valid text-danger" data-valmsg-for="Status" data-valmsg-replace="true"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    @*<div class="form-group">
+                        @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Category, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
+                        </div>
+                    </div>*@
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2" for="MainSupplier">MainSupplier</label>
+                        <div class="col-md-10">
+                            <input class="form-control text-box single-line" id="MainSupplier" name="MainSupplier" type="text" value="" />
+                            <span class="field-validation-valid text-danger" data-valmsg-for="MainSupplier" data-valmsg-replace="true"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2" for="MainCustomer">MainCustomer</label>
+                        <div class="col-md-10">
+                            <input class="form-control text-box single-line" id="MainCustomer" name="MainCustomer" type="text" value="" />
+                            <span class="field-validation-valid text-danger" data-valmsg-for="MainCustomer" data-valmsg-replace="true"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2" for="HeatStability">HeatStability</label>
+                        <div class="col-md-10">
+                            <input class="form-control text-box single-line" id="HeatStability" name="HeatStability" type="text" value="" />
+                            <span class="field-validation-valid text-danger" data-valmsg-for="HeatStability" data-valmsg-replace="true"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2" for="LightSatability">LightSatability</label>
+                        <div class="col-md-10">
+                            <input class="form-control text-box single-line" id="LightSatability" name="LightSatability" type="text" value="" />
+                            <span class="field-validation-valid text-danger" data-valmsg-for="LightSatability" data-valmsg-replace="true"></span>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2" for="Fda">Fda</label>
+                        <div class="col-md-10">
+                            <div class="checkbox">
+                                <input class="check-box" data-val="true" data-val-required="O campo Fda é obrigatório." id="Fda" name="Fda" type="checkbox" value="true" /><input name="Fda" type="hidden" value="false" />
+                                <span class="field-validation-valid text-danger" data-valmsg-for="Fda" data-valmsg-replace="true"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2" for="Hbfb">Hbfb</label>
+                        <div class="col-md-10">
+                            <div class="checkbox">
+                                <input checked="checked" class="check-box" data-val="true" data-val-required="O campo Hbfb é obrigatório." id="Hbfb" name="Hbfb" type="checkbox" value="true" /><input name="Hbfb" type="hidden" value="false" />
+                                <span class="field-validation-valid text-danger" data-valmsg-for="Hbfb" data-valmsg-replace="true"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2" for="QCRequired">QCRequired</label>
+                        <div class="col-md-10">
+                            <div class="checkbox">
+                                <input class="check-box" data-val="true" data-val-required="O campo QCRequired é obrigatório." id="QCRequired" name="QCRequired" type="checkbox" value="true" /><input name="QCRequired" type="hidden" value="false" />
+                                <span class="field-validation-valid text-danger" data-valmsg-for="QCRequired" data-valmsg-replace="true"></span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-2" for="BarCode">BarCode</label>
+                        <div class="col-md-10">
+                            <input class="form-control text-box single-line" id="BarCode" name="BarCode" type="text" value="" />
+                            <span class="field-validation-valid text-danger" data-valmsg-for="BarCode" data-valmsg-replace="true"></span>
+                        </div>
                     </div>
                 </div>
-            </div>
-    
-            @*<div class="form-group">
-                @Html.LabelFor(model => model.Category, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Category, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
-                </div>
-            </div>*@
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.MainSupplier, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.MainSupplier, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.MainSupplier, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.MainCustomer, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.MainCustomer, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.MainCustomer, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.HeatStability, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.HeatStability, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.HeatStability, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.LightSatability, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.LightSatability, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.LightSatability, "", new { @class = "text-danger" })
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.Fda, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <div class="checkbox">
-                        @Html.EditorFor(model => model.Fda)
-                        @Html.ValidationMessageFor(model => model.Fda, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.Hbfb, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <div class="checkbox">
-                        @Html.EditorFor(model => model.Hbfb)
-                        @Html.ValidationMessageFor(model => model.Hbfb, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.QCRequired, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <div class="checkbox">
-                        @Html.EditorFor(model => model.QCRequired)
-                        @Html.ValidationMessageFor(model => model.QCRequired, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-    
-            <div class="form-group">
-                @Html.LabelFor(model => model.BarCode, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.BarCode, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.BarCode, "", new { @class = "text-danger" })
-                </div>
-            </div>   
-        </div>
-   </div>@*end Container*@
-    }
-    </div>@*end panel*@
-</body>
-</html>
+            </div>  
+            </form>
+</div>
