--- a/ViewAulus/Views/TargetTypes/Create.cshtml
+++ b/ViewAulus/Views/TargetTypes/Create.cshtml
@@ -4,51 +4,48 @@
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="panel spacer-20">
-    <div class="panel-heading no-padding">
-        <a href="#" class="panel-expander notext fr">&nbsp;</a>
-        <h2 class="clipboard">Create Target Type</h2>
-    </div>
-    @using (Html.BeginForm("Create", "TargetTypes", FormMethod.Post, new { id = "create" }))
-    {
-        <div class="panel-container">
-            <div class="options">
-                <ul>
-                    <li>
-                        @*@Html.ActionLink("Post", "Create", "", new { @class = "post" })*@
-                        <a class="post" href='javascript:create.submit()'>Post</a>
-                    </li>
 
-                    <li>@Html.ActionLink("Cancel", "Index", "", new { @class = "cancel" })</li>
-                </ul>
-            </div>
-            </div>
-           
-      
 
-            @Html.AntiForgeryToken()
+                        <div class="panel spacer-20">
+                            <div class="panel-heading no-padding">
+                                <a href="#" class="panel-expander notext fr">&nbsp;</a>
+                                <h2 class="clipboard">Create Target Type</h2>
+                            </div>
+                            <form action="/TargetTypes/Create" id="create" method="post">
+                                <div class="panel-container">
+                                    <div class="options">
+                                        <ul>
+                                            <li>
 
-            <div class="form-horizontal">
+                                                <a class="post" href='javascript:create.submit()'>Post</a>
+                                            </li>
 
-                <hr />
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+                                            <li><a class="cancel" href="/TargetTypes?Length=0">Cancel</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <input name="__RequestVerificationToken" type="hidden" value="aQdOoeylchQVk7Eh4c0xAPX7ftRqWy3uJQBdwZGbDIGXGciz-pUKLlYMa6xVnTmF8UFOdm3M7qqOFTJqS6HOiuWlTRFWfIbMMVzR6BgA9nY1" />            <div class="form-horizontal">
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-            }
+                                    <hr />
 
-       
-    </div>
+                                    <div class="form-group">
+                                        <label class="control-label col-md-2" for="Name">Name</label>
+                                        <div class="col-md-10">
+                                            <input class="form-control text-box single-line" id="Name" name="Name" type="text" value="" />
+                                            <span class="field-validation-valid text-danger" data-valmsg-for="Name" data-valmsg-replace="true"></span>
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label class="control-label col-md-2" for="Description">Description</label>
+                                        <div class="col-md-10">
+                                            <input class="form-control text-box single-line" id="Description" name="Description" type="text" value="" />
+                                            <span class="field-validation-valid text-danger" data-valmsg-for="Description" data-valmsg-replace="true"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+
+                        </div>
+
+               
